--- a/index.html
+++ b/index.html
@@ -338,12 +338,12 @@
     
     <div class="gallery-container">
       <div class="main-image-container">
-        <img src="../Documentos/Ocre/img/1.jpg" alt="Ocre Bayer Importado" id="mainImage" class="main-image" onclick="toggleZoom()">
+        <img src="img/1.jpg" alt="Ocre Bayer Importado" id="mainImage" class="main-image" onclick="toggleZoom()">
       </div>
       
       <div class="thumbnail-container">
         <div class="thumbnail selected" onclick="changeImage('../Documentos/Ocre/img/1.jpg', this)">
-          <img src="../Documentos/Ocre/img/1.jpg" alt="Ocre Bayer 1">
+          <img src="../img/1.jpg" alt="Ocre Bayer 1">
         </div>
         <div class="thumbnail" onclick="changeImage('../Documentos/Ocre/img/2.jpg', this)">
           <img src="../Documentos/Ocre/img/2.jpg" alt="Ocre Bayer 2">
