--- a/index.html
+++ b/index.html
@@ -343,16 +343,16 @@
       
       <div class="thumbnail-container">
         <div class="thumbnail selected" onclick="changeImage('../Documentos/Ocre/img/1.jpg', this)">
-          <img src="../img/1.jpg" alt="Ocre Bayer 1">
+          <img src="img/1.jpg" alt="Ocre Bayer 1">
         </div>
         <div class="thumbnail" onclick="changeImage('../Documentos/Ocre/img/2.jpg', this)">
-          <img src="../Documentos/Ocre/img/2.jpg" alt="Ocre Bayer 2">
+          <img src="img/2.jpg" alt="Ocre Bayer 2">
         </div>
         <div class="thumbnail" onclick="changeImage('../Documentos/Ocre/img/3.jpg', this)">
-          <img src="../Documentos/Ocre/img/3.jpg" alt="Ocre Bayer 3">
+          <img src="img/3.jpg" alt="Ocre Bayer 3">
         </div>
         <div class="thumbnail" onclick="changeImage('../Documentos/Ocre/img/4.jpg', this)">
-          <img src="../Documentos/Ocre/img/4.jpg" alt="Ocre Bayer 4">
+          <img src="img/4.jpg" alt="Ocre Bayer 4">
         </div>
       </div>
     </div>
