--- a/index.html
+++ b/index.html
@@ -342,16 +342,16 @@
       </div>
       
       <div class="thumbnail-container">
-        <div class="thumbnail selected" onclick="changeImage('../Documentos/Ocre/img/1.jpg', this)">
+        <div class="thumbnail selected" onclick="changeImage('img/1.jpg', this)">
           <img src="img/1.jpg" alt="Ocre Bayer 1">
         </div>
-        <div class="thumbnail" onclick="changeImage('../Documentos/Ocre/img/2.jpg', this)">
+        <div class="thumbnail" onclick="changeImage('img/2.jpg', this)">
           <img src="img/2.jpg" alt="Ocre Bayer 2">
         </div>
-        <div class="thumbnail" onclick="changeImage('../Documentos/Ocre/img/3.jpg', this)">
+        <div class="thumbnail" onclick="changeImage('img/3.jpg', this)">
           <img src="img/3.jpg" alt="Ocre Bayer 3">
         </div>
-        <div class="thumbnail" onclick="changeImage('../Documentos/Ocre/img/4.jpg', this)">
+        <div class="thumbnail" onclick="changeImage('img/4.jpg', this)">
           <img src="img/4.jpg" alt="Ocre Bayer 4">
         </div>
       </div>
